--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "api-routes-rest",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "node bot.js",
     "build": "next build",
-    "start": "node bot.js",
+    "start": "next start",
     "serve": "node bot.js"
   },
   "dependencies": {
